# robotd

./: CMakeLists.txt  Doxyfile  README.md  directories.cpp  server_main.cpp
cfg/: daemon.cfg
daemon/: cli_parser.cpp  cli_parser.hpp  daemon.hpp  daemon_impl.hpp  master.hpp  master_impl.hpp
include/: config.h  definitions.hpp  directories.h  messages.h  system_messages.hpp
include/spdlog/: common.h  logger.h  tweakme.h
include/spdlog/details/: logger_impl.h
include/spdlog/sinks/: file_sinks.h
loader/: loader.hpp  loader_impl.hpp
slaves/include/: service.hpp
slaves/periphery/: periphery.cpp  periphery.hpp
slaves/test/: async_client.cpp  connection.cpp  connection.hpp  reply.cpp  reply.hpp  request_handler.cpp  request_handler.hpp  tcp_server.cpp  tcp_server.hpp
